# MLO

./: .dockerignore  .gitignore  Dockerfile  MLOPS_DOCUMENTATION.md  Makefile  README.md  README_MLOPS.md  docker-compose.yml  pyproject.toml
01-divorce-eda/: README.md
01-divorce-eda/notebooks/: 00_data_loading.ipynb  01_data_cleaning.ipynb  02_descriptive_statistics.ipynb  03_univariate_visualizations.ipynb  04_feature_analysis.ipynb  05_reporte_final_eda.ipynb
01-divorce-eda/scripts/: data_cleaning.py  descriptive_stats.py  feature_analysis.py  load_data.py  preprocessing.py  visualization.py  visualization_utils.py
03-tracking/: README.md
03-tracking/notebooks/: 00_data_preparation.ipynb  01_first_steps_without_tracking.ipynb  02_experiment_tracking_intro.ipynb  03_mlflow_advanced.ipynb
03-tracking/scenarios/: scenario-1.ipynb  scenario-2.ipynb  scenario-3.ipynb
03-tracking/scripts/: train_no_mlflow.py  train_with_basic_mlflow.py  train_with_full_mlflow.py
MLO/02-setup/: 01-github-ssh-setup.md  02-python-environment-setup.md  README.md
MLO/03-tracking/notebooks/: 00_data_preparation.ipynb
MLO/03-tracking/scripts/: preprocess_data.py
flows/: ml_pipeline.py
src/: batch_predict.py  train_model.py
src/api/: main.py
