[project]
name = "machine-learning-udm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.6.0",
    "mlflow>=3.2.0",
    "numpy>=1.23.0",
    "openpyxl>=3.0.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.9.0",
    "seaborn>=0.12.0",
    "ucimlrepo>=0.0.3",
    "xgboost>=3.1.1",
]
