[project]
name = "machine-learning-udm"
version = "0.1.0"
description = "MLOps Pipeline for Divorce Prediction - Universidad de Medellín"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.6.0",
    "mlflow>=3.2.0",
    "numpy>=1.23.0",
    "openpyxl>=3.0.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.9.0",
    "seaborn>=0.12.0",
    "ucimlrepo>=0.0.3",
    "xgboost>=3.1.1",
    "prefect>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "joblib>=1.4.0",
]
